@startuml
interface IAwarnessValidator {
    + validateSceneReadiness() : Task
}
class SceneAwarnessValidator {
    + Construct(cloudManager:SpatialAnchorManager) : void
    + <<async>> validateSceneReadiness() : Task
    Update() : void
}
MonoBehaviour <|-- SceneAwarnessValidator
IAwarnessValidator <|-- SceneAwarnessValidator
@enduml
